# MusicPlayerv2

Music Player/: CMakeLists.txt  README.md  main.cpp
Music Player/include/: Songs.h  music_player.h
Music Player/src/: Songs.cpp  music_player.cpp
untitled/: CMakeLists.txt  main.cpp
